--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native": "0.76.5",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-listener": "^1.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
