update api link

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-<<<<<<< HEAD
-EXPO_PUBLIC_API_URL =https://a2ca-103-151-74-161.ngrok-free.app
-=======
+EXPO_PUBLIC_API_URL = https://0f93-103-151-74-160.ngrok-free.app
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZWFnZXItbW9zcXVpdG8tODMuY2xlcmsuYWNjb3VudHMuZGV2JA
->>>>>>> 30870fd (clerk_package)
