--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
+    "expo-local-authentication": "^15.0.2",
     "expo-router": "^4.0.15",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.18",
@@ -49,6 +50,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-listener": "^1.1.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
