--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "expo": "^52.0.23",
+    "expo-auth-session": "^6.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
