--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-listener": "^1.1.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
