--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "^52.0.23",
     "expo-auth-session": "^6.0.2",
     "expo-blur": "~14.0.1",
@@ -34,6 +36,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-local-authentication": "^15.0.2",
+    "expo-random": "^13.6.0",
     "expo-router": "^4.0.15",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.18",
@@ -41,10 +44,13 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "google-auth-library": "^9.15.1",
     "lottie-react-native": "7.1.0",
     "nativewind": "^4.1.23",
+    "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.4.0",
     "react-native": "0.76.5",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
