--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
     "react-native-swiper": "^1.6.0",
