--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.6.10",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/material-top-tabs": "^7.1.0",
@@ -27,22 +27,22 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "^52.0.23",
+    "expo": "~52.0.26",
     "expo-auth-session": "^6.0.2",
-    "expo-blur": "~14.0.1",
+    "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
+    "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.3",
+    "expo-linking": "~7.0.5",
     "expo-local-authentication": "^15.0.2",
     "expo-random": "^13.6.0",
-    "expo-router": "^4.0.15",
+    "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.1",
+    "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.1",
     "google-auth-library": "^9.15.1",
     "lottie-react-native": "7.1.0",
@@ -51,7 +51,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.4.0",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
@@ -63,8 +63,8 @@
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
@@ -85,7 +85,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.3",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
