Revert "fixing splash"
This reverts commit 17cc77b623d4f8784c465a162b99ba92fa7944a8.

--- a/app.json
+++ b/app.json
@@ -2,11 +2,6 @@
   "expo": {
     "name": "AinPal",
     "slug": "AinPal",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -14,8 +9,7 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.AinPal"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
@@ -34,7 +28,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash.png",
+          "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
