--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -85,6 +84,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "prettier": "^3.4.2",
+    "react-native-reanimated": "^3.16.7",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
