--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_URL =  https://3845-103-151-74-160.ngrok-free.app
+EXPO_PUBLIC_API_URL =  https://b9bf-2401-1900-162-9d55-aa57-f34e-7fa6-bf28.ngrok-free.app
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZWFnZXItbW9zcXVpdG8tODMuY2xlcmsuYWNjb3VudHMuZGV2JA
