--- a/app.json
+++ b/app.json
@@ -34,9 +34,9 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash.png",
-          "imageWidth": 200,
+          "imageWidth": 300,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#797BA8"
         }
       ],
       "expo-secure-store"
