--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_URL =  https://612e-103-151-74-160.ngrok-free.app
+EXPO_PUBLIC_API_URL =  https://fb56-103-151-74-161.ngrok-free.app
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZWFnZXItbW9zcXVpdG8tODMuY2xlcmsuYWNjb3VudHMuZGV2JA
